Prevent stretchy horizontal scrolling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,8 @@
 * {
   -webkit-tap-highlight-color: transparent;
 
+  overscroll-behavior-x: none;
+
   @apply select-none;
 }
 
